programlar sayfasında güncelleme
videoların bazılarımda güncelleme yaptım

--- a/programlar.html
+++ b/programlar.html
@@ -279,7 +279,7 @@ nav {
             
             <div class="exercise-card">
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/F3QY5vMz_6I" allowfullscreen></iframe>
+                    <iframe src=https://youtu.be/RInajuHTU1U allowfullscreen></iframe>
                 </div>
                 <div class="exercise-info">
                     <h3 class="exercise-name">Decline Bench Press</h3>
@@ -654,3 +654,4 @@ nav {
     </script>
 </body>
 </html>
+
